# xgen-omnifuse

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: vault_example.py
src/omnifuse/: __init__.py  vault.py
tests/: test_vault.py
