[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xgen-omnifuse"
version = "0.4.0"
description = "Backend-agnostic one-shot GraphRAG: fuse vector + graph (label/class/relation) seeds with MMR diversity into a single synthesis. Zero-infra default."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "jinsoo96", email = "wlstn010203@gmail.com" }]
keywords = ["graphrag", "rag", "retrieval", "knowledge-graph", "bm25", "mmr", "ontology"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
fuseki = ["httpx>=0.27"]
qdrant = ["qdrant-client>=1.12"]
dev = ["pytest>=8", "ruff>=0.5"]

[project.urls]
Homepage = "https://github.com/jinsoo96/xgen-omnifuse"
Issues = "https://github.com/jinsoo96/xgen-omnifuse/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/omnifuse"]
